--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -18,7 +18,7 @@
 }
 
 .rouble {
-  font-family: $ff-rouble;
+  font-family: $ff-manrope;
   /* stylelint-disable */
   text-transform: lowercase !important;
   font-weight: 400 !important;
