Добавляет верстку шапки

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,10 @@
 
 @import "blocks/btn";
 @import "blocks/logo";
+@import "blocks/hero";
+@import "blocks/hero-header";
+@import "blocks/main-nav";
+@import "blocks/site-list";
 @import "blocks/modal";
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
