--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,14 +6,14 @@
 $color-default-black:               #000000;
 $color-default-white:               #ffffff;
 $color-default-profect:             #484848;
-$color-default-blue:                #316DC2;
 $color-transparent:                 rgba(255, 255, 255, 0);
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
-$color-project:                   #ff1553;
-$color-project:                   #ff1553;
+$color-default-blue:                #316dc2;
+$color-default-blue-opacity70:      rgb(49, 109, 194, 0.7);
+$color-default-white-opacity70:     rgb(255, 255, 255, 0.7);
 
 // Gradient
 
