--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -2,9 +2,41 @@
   position: relative;
 }
 
+// КНОПКА МЕНЮ
+.main-nav .main-nav__toggle {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 22px 20px;
+  height: 54px;
+  border-radius: 30px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 14px;
+  letter-spacing: 0.28px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+// КРУГ ВОКРУГ БУРГЕРА
+.main-nav .main-nav__toggle-circle {
+  &::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 4px;
+    width: 46px;
+    height: 46px;
+    border-radius: 50%;
+  }
+}
+
 // КНОПКА ЗАКРЫТОГО МЕНЮ
 .main-nav--closed .main-nav__toggle {
   width: 134px;
+  color: $color-default-blue;
+  background-color: $color-default-white;
+  border: 1px solid $color-default-blue;
   // БУРГЕР
   &::after {
     content: "";
@@ -18,9 +50,19 @@
   }
 }
 
+.main-nav--closed .main-nav__toggle-circle {
+  // СИНИЙ КРУГ ВОКРУГ БУРГЕРА
+  &::before {
+    background-color: $color-default-blue;
+  }
+}
+
 // КНОПКА ОТКРЫТОЕ МЕНЮ
 .main-nav--opened .main-nav__toggle {
   width: 286px;
+  color: $color-default-white;
+  background-color: $color-default-blue;
+  border: 1px solid $color-default-blue;
   // КРЕСТИК
   &::before,
   &::after {
@@ -41,5 +83,11 @@
 
   &::after {
     transform: rotate(-45deg);
+  }
+}
+// БЕЛЫЙ КРУГ ВОКРУГ КРЕСТИКА
+.main-nav--opened .main-nav__toggle-circle {
+  &::before {
+    background-color: $color-default-white;
   }
 }
