--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -60,6 +60,7 @@
   line-height: 16px;
   letter-spacing: 0.32px;
   text-transform: uppercase;
+  cursor: pointer;
 }
 // СТРЕЛКА КНОПКИ
 .site-list__toggle-arrow {
