--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,12 +1,39 @@
+// ЗАКРЫТЫЙ СПИСОК МЕНЮ
 .site-list {
+  display: none;
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
 
-// ЗАКРЫТЫЙ СПИСОК МЕНЮ
-.main-nav--closed .site-list {
+// ЗАКРЫТЫЙ СПИСОК ПОДМЕНЮ
+.site-list__secondary {
   display: none;
+}
+
+// ЗАКРЫТАЯ КНОПКА ПОДМЕНЮ
+.site-list__toggle {
+  position: relative;
+  padding: 0;
+  color: $color-default-white-opacity70;
+  background-color: transparent;
+  border: none;
+  line-height: 16px;
+  letter-spacing: 0.32px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+//ЗАКРЫТАЯ СТРЕЛКА КНОПКИ
+.site-list__toggle-arrow {
+  display: inline-flex;
+  margin: 0 0 0 10px;
+  width: 10px;
+  height: 10px;
+  cursor: pointer;
+  border-top: 3px solid $color-default-white-opacity70;
+  border-right: 3px solid $color-default-white-opacity70;
+  transform: rotate(135deg);
 }
 
 // ОТКРЫТЫЙ СПИСОК МЕНЮ
@@ -31,11 +58,6 @@
   text-transform: uppercase;
 }
 
-// ЗАКРЫТЫЙ СПИСОК ПОДМЕНЮ
-.site-list__button .site-list__secondary {
-  display: none;
-}
-
 // ОТКРЫТЫЙ СПИСОК ПОДМЕНЮ
 .site-list__button--opened .site-list__secondary {
   display: flex;
@@ -50,36 +72,13 @@
   color: $color-default-white-opacity70;
 }
 
-// ЗАКРЫТАЯ КНОПКА ПОДМЕНЮ
-.site-list__toggle {
-  position: relative;
-  padding: 0;
-  color: $color-default-white-opacity70;
-  background-color: transparent;
-  border: none;
-  line-height: 16px;
-  letter-spacing: 0.32px;
-  text-transform: uppercase;
-  cursor: pointer;
-}
-// СТРЕЛКА КНОПКИ
-.site-list__toggle-arrow {
-  display: inline-flex;
-  margin: 0 0 0 10px;
-  width: 10px;
-  height: 10px;
-  cursor: pointer;
-  border-top: 3px solid $color-default-white-opacity70;
-  border-right: 3px solid $color-default-white-opacity70;
-  transform: rotate(135deg);
-}
-
 // ОТКРЫТАЯ КНОПКА ПОДМЕНЮ
 .site-list__button--opened .site-list__toggle {
   margin: 0 0 20px;
   color: $color-default-white;
 }
-// СТРЕЛКА КНОПКИ
+
+//ОТКРЫТАЯ СТРЕЛКА КНОПКИ
 .site-list__button--opened .site-list__toggle-arrow {
   border-top: 3px solid $color-default-white;
   border-right: 3px solid $color-default-white;
