Добавляет верстку блока Hero-блок по ПП

--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -6,11 +6,6 @@
   list-style-type: none;
 }
 
-// ЗАКРЫТЫЙ СПИСОК ПОДМЕНЮ
-.site-list__secondary {
-  display: none;
-}
-
 // ЗАКРЫТАЯ КНОПКА ПОДМЕНЮ
 .site-list__toggle {
   position: relative;
@@ -24,7 +19,7 @@
   cursor: pointer;
 }
 
-//ЗАКРЫТАЯ СТРЕЛКА КНОПКИ
+//ЗАКРЫТАЯ СТРЕЛКА КНОПКИ ПОДМЕНЮ
 .site-list__toggle-arrow {
   display: inline-flex;
   margin: 0 0 0 10px;
@@ -34,6 +29,11 @@
   border-top: 3px solid $color-default-white-opacity70;
   border-right: 3px solid $color-default-white-opacity70;
   transform: rotate(135deg);
+}
+
+// ЗАКРЫТЫЙ СПИСОК ПОДМЕНЮ
+.site-list__secondary {
+  display: none;
 }
 
 // ОТКРЫТЫЙ СПИСОК МЕНЮ
@@ -58,23 +58,16 @@
   text-transform: uppercase;
 }
 
-// ОТКРЫТЫЙ СПИСОК ПОДМЕНЮ
-.site-list__button--opened .site-list__secondary {
+// ОТКРЫТАЯ КНОПКА И СПИСОК ПОДМЕНЮ
+.site-list__button--opened {
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  margin: 0 0 0 16px;
-  padding: 0;
-  list-style-type: none;
-}
-
-.site-list__button--opened .site-list__link-secondary {
-  color: $color-default-white-opacity70;
+  align-items: flex-start;
+  gap: 20px;
 }
 
 // ОТКРЫТАЯ КНОПКА ПОДМЕНЮ
 .site-list__button--opened .site-list__toggle {
-  margin: 0 0 20px;
   color: $color-default-white;
 }
 
@@ -83,4 +76,19 @@
   border-top: 3px solid $color-default-white;
   border-right: 3px solid $color-default-white;
   transform: rotate(-45deg);
+}
+
+// ОТКРЫТЫЙ СПИСОК ПОДМЕНЮ
+.site-list__button--opened .site-list__secondary {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  margin: 0 0 0 16px;
+  padding: 0;
+  list-style-type: none;
+}
+
+.site-list__button--opened .site-list__link-secondary {
+  color: $color-default-white-opacity70;
 }
