--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 22px 20px;
+  padding: 22px 28px;
   height: 54px;
   color: $color-default-blue;
   background-color: $color-default-white;
@@ -14,6 +14,13 @@
   line-height: 14px;
   letter-spacing: 0.28px;
   text-transform: uppercase;
+
+  @include vp-767 {
+    padding: 16px 20px;
+    height: 42px;
+    font-size: 12px;
+    line-height: 12px;
+  }
 
   //СИНИЙ КРУГ
   &::before {
@@ -26,27 +33,38 @@
     height: 46px;
     background-color: $color-default-blue;
     border-radius: 50%;
+
+    @include vp-767 {
+      width: 34px;
+      height: 32px;
+    }
   }
 }
 
 .btn span {
+  position: absolute;
+  top: 22px;
+  right: 22px;
   display: inline-flex;
-  margin: 0 0 0 10px;
-  width: 10px;
-  height: 10px;
-  cursor: pointer;
-  border-top: 3px solid $color-default-white;
-  border-right: 3px solid $color-default-white;
-  transform: rotate(45deg);
-}
+  width: 8px;
+  height: 8px;
+  border-top: 1px solid $color-default-white;
+  border-right: 1px solid $color-default-white;
+  transform: rotate(0deg);
 
-// .btn--blue span {
-//   display: inline-flex;
-//   margin: 0 0 0 10px;
-//   width: 10px;
-//   height: 10px;
-//   cursor: pointer;
-//   border-top: 3px solid $color-default-white;
-//   border-right: 3px solid $color-default-white;
-//   transform: rotate(45deg);
-// }
+  &::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    right: -2px;
+    width: 12px;
+    height: 1px;
+    background-color: $color-default-white;
+    transform: rotate(135deg);
+  }
+
+  @include vp-767 {
+    top: 16px;
+    right: 16px;
+  }
+}
