Добавляет верстку блока О нас

--- a/source/sass/blocks/hero-main.scss
+++ b/source/sass/blocks/hero-main.scss
@@ -32,7 +32,7 @@
   opacity: 1;
 }
 
-.hero-main__heading {
+.hero-main__header {
   padding: 40px 50px 30px 50px;
   width: 78.06%;
   color: $color-default-blue;
@@ -51,7 +51,7 @@
   }
 }
 
-.hero-main__heading h2 {
+.hero-main__header h2 {
   margin: 0;
   font-size: 54px;
   font-weight: 400;
