--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,6 +26,7 @@
 @import "blocks/main-nav";
 @import "blocks/site-list";
 @import "blocks/hero-main";
+@import "blocks/about";
 @import "blocks/modal";
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
