--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -14,6 +14,7 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 $color-gentian-blue-opacity40:      rgba(13, 29, 51, 0.4);
 $color-default-blue:                #316dc2;
 $color-brown:                       #964b00;
+$color-timber-wolf:                 #f0efe9;
 $color-default-blue-opacity70:      rgb(49, 109, 194, 0.7);
 $color-default-white-opacity70:     rgb(255, 255, 255, 0.7);
 
