--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -16,6 +16,7 @@ $color-default-blue:                #316dc2;
 $color-brown:                       #964b00;
 $color-timber-wolf:                 #f0efe9;
 $color-default-blue-opacity70:      rgb(49, 109, 194, 0.7);
+$color-default-blue-opacity20:      rgba(49, 109, 194, 0.2);
 $color-default-white-opacity70:     rgb(255, 255, 255, 0.7);
 
 
