--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -44,10 +44,18 @@
 }
 
 .hero__wrapper {
-  padding: 30px 0 0;
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 30px 100px 0;
+  background-color: $color-default-blue-opacity20;
+
+  @include vp-1199 {
+    padding: 30px 45px 0;
+  }
 
   @include vp-767 {
-    padding: 20px 0 0;
+    padding: 20px 15px 0;
   }
 }
 
