--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,6 +1,17 @@
 .main-nav {
-  position: relative;
+  position: absolute;
+  top: 30px;
+  right: 100px;
   z-index: 2;
+
+  @include vp-1199 {
+    right: 45px;
+  }
+
+  @include vp-767 {
+    top: 20px;
+    right: 15px;
+  }
 }
 
 // КНОПКА ЗАКРЫТОГО МЕНЮ
@@ -52,12 +63,23 @@
   }
 }
 
+// ОТКРЫТАЯ НАВИГАЦИЯ
+.main-nav--opened {
+  @include vp-767 {
+    width: calc(100% - 30px);
+  }
+}
+
 // КНОПКА ОТКРЫТОЕ МЕНЮ
 .main-nav--opened .main-nav__toggle {
-  width: 286px;
+  min-width: 286px;
   color: $color-default-white;
   background-color: $color-default-blue;
   border: 1px solid $color-default-blue;
+
+  @include vp-767 {
+    min-width: 100%;
+  }
 
   // КРЕСТИК
   &::before,
