--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,7 +19,9 @@
 // ---------------------------------
 
 @import "blocks/btn";
+@import "blocks/btn-secondary";
 @import "blocks/overlay";
+@import "blocks/swiper-buttons";
 @import "blocks/logo";
 @import "blocks/hero";
 @import "blocks/hero-header";
@@ -27,6 +29,10 @@
 @import "blocks/site-list";
 @import "blocks/hero-main";
 @import "blocks/about";
+@import "blocks/programs";
+@import "blocks/programs-card";
+
+
 @import "blocks/modal";
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
