--- a/source/sass/blocks/hero-header.scss
+++ b/source/sass/blocks/hero-header.scss
@@ -1,5 +1,15 @@
 .hero-header {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 30px 100px 0;
+
+  @include vp-1199 {
+    padding: 30px 45px 0;
+  }
+
+  @include vp-767 {
+    padding: 20px 15px 0;
+  }
 }
