Добавляет блок как поехать

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -31,6 +31,7 @@
 @import "blocks/about";
 @import "blocks/programs";
 @import "blocks/programs-card";
+@import "blocks/grant";
 
 
 @import "blocks/modal";
