--- a/source/sass/blocks/hero-main.scss
+++ b/source/sass/blocks/hero-main.scss
@@ -32,37 +32,28 @@
   opacity: 1;
 }
 
-.hero-main__header {
+.hero-main h2 {
+  margin: 0;
   padding: 40px 50px 30px 50px;
   width: 78.06%;
   color: $color-default-blue;
   background-color: $color-default-white;
   border-radius: 0 30px 30px 0;
+  font-size: 54px;
+  font-weight: 400;
+  line-height: 62px;
 
   @include vp-1199 {
     padding: 30px 40px 24px 40px;
     width: 97.2%;
+    font-size: 36px;
+    line-height: 44px;
   }
 
   @include vp-767 {
     padding: 20px 14px 16px 14px;
     border-radius: 0 16px 16px 0;
     width: 100%;
-  }
-}
-
-.hero-main__header h2 {
-  margin: 0;
-  font-size: 54px;
-  font-weight: 400;
-  line-height: 62px;
-
-  @include vp-1199 {
-    font-size: 36px;
-    line-height: 44px;
-  }
-
-  @include vp-767 {
     font-size: 22px;
     line-height: 26px;
   }
@@ -92,15 +83,7 @@
   }
 }
 
-.hero-main__description {
-  @include vp-767 {
-    padding: 0 14px 15px;
-    background-color: $color-default-white;
-    border-radius: 0 0 14px 0;
-  }
-}
-
-.hero-main__description p {
+.hero-main__info p {
   margin: 0;
 
   @include vp-1199 {
@@ -108,12 +91,15 @@
     line-height: 20px;
 
     @include vp-767 {
+      padding: 0 14px 15px;
+      background-color: $color-default-white;
+      border-radius: 0 0 14px 0;
       font-size: 14px;
     }
   }
 }
 
-.hero-main__link {
+.hero-main__info a {
   min-width: 196px;
 
   @include vp-767 {
