--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,6 +32,7 @@
 @import "blocks/programs";
 @import "blocks/programs-card";
 @import "blocks/grant";
+@import "blocks/news";
 
 
 @import "blocks/modal";
