--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,6 +33,7 @@
 @import "blocks/programs-card";
 @import "blocks/grant";
 @import "blocks/news";
+@import "blocks/news-card";
 
 
 @import "blocks/modal";
