--- a/source/sass/blocks/news-card.scss
+++ b/source/sass/blocks/news-card.scss
@@ -41,7 +41,7 @@
   width: calc(25% - 24px);
 
   @include vp-1199 {
-    width: auto;
+    width: calc(50% - 60px);
   }
 }
 
@@ -49,26 +49,42 @@
   width: calc(50% - 16px);
 
   @include vp-1199 {
-    width: auto;
+    width: calc(50% - 60px);
   }
 }
 
 .swiper-slide .news-card__info {
   width: calc(100% - 46px);
+
+  @include vp-1199 {
+    width: calc(100% - 84px);
+  }
 }
 
 .swiper-slide-active .news-card__info {
   width: calc(100% - 215px);
+
+  @include vp-1199 {
+    width: calc(100% - 84px);
+  }
 }
 
 .swiper-slide .news-card__header {
   width: calc(100% - 72px);
   padding: 10px 10px 4px 0;
+
+  @include vp-1199 {
+    width: calc(100% - 117px);
+  }
 }
 
 .swiper-slide-active .news-card__header {
   padding: 18px 18px 6px 0;
   width: calc(100% - 313px);
+
+  @include vp-1199 {
+    width: calc(100% - 117px);
+  }
 }
 
 .news-card__wrapper {
@@ -77,10 +93,14 @@
   justify-content: flex-end;
   align-self: flex-start;
   min-height: 400px;
+
+  @include vp-1199 {
+    min-height: 350px;
+  }
 }
 
 .news-card__date span {
-  padding: 12px 12px 6px;
+  padding: 12px 12px 6px 0;
   color: $color-default-blue;
   background-color: $color-default-white;
   border-radius: 0 12px 0 0;
@@ -101,6 +121,11 @@
   font-size: 24px;
   font-weight: 400;
   line-height: 26px;
+
+  @include vp-1199 {
+    font-size: 20px;
+    line-height: 24px;
+  }
 }
 
 .news-card__info {
@@ -118,4 +143,8 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
+
+  @include vp-1199 {
+    line-height: 20px;
+  }
 }
