Добавляет часть блока Отзывы

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,6 +38,8 @@
 @import "blocks/news-card";
 @import "blocks/questions";
 @import "blocks/question";
+@import "blocks/reviews";
+@import "blocks/reviews-card";
 
 
 @import "blocks/modal";
