Добавляет блок контакты и доработку блока отзывы

--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -5,10 +5,20 @@
   align-items: center;
   gap: 40px;
   padding: 120px 0;
+
+  @include vp-1199 {
+    padding: 113px 0 110px;
+  }
+
+  @include vp-767 {
+    padding: 67px 0;
+  }
 }
 
 .reviews__header {
-
+  @include vp-767 {
+    order: 1;
+  }
 }
 
 .reviews__header h2 {
@@ -26,6 +36,12 @@
   @include vp-767 {
     font-size: 20px;
     line-height: 20px;
+  }
+}
+
+.reviews__swiper {
+  @include vp-767 {
+    order: 3;
   }
 }
 
