--- a/source/sass/blocks/reviews-card.scss
+++ b/source/sass/blocks/reviews-card.scss
@@ -5,12 +5,20 @@
   height: auto;
   border: 1px solid $color-default-blue;
   border-radius: 16px;
+
+  @include vp-767 {
+    grid-template-columns: 1fr;
+  }
 }
 
 .reviews-card__header {
   display: flex;
   align-items: center;
   gap: 15px;
+
+  @include vp-767 {
+    margin: 0 0 15px;
+  }
 }
 
 .reviews-card__header img {
@@ -34,6 +42,11 @@
 .reviews-card__info {
   justify-self: end;
   align-self: center;
+
+
+  @include vp-767 {
+    justify-self: start;
+  }
 }
 
 .reviews-card__list {
@@ -73,6 +86,14 @@
 .reviews-card__content {
   grid-column: 1/3;
   margin: 30px 0 0;
+
+  @include vp-767 {
+    grid-column: 1/2;
+  }
+
+  @include vp-767 {
+    margin: 25px 0 0;
+  }
 }
 
 .reviews-card__content h3 {
