--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -43,6 +43,9 @@
 @import "blocks/reviews-card";
 @import "blocks/contacts";
 @import "blocks/map";
+@import "blocks/footer";
+@import "blocks/footer-header";
+@import "blocks/social";
 
 
 @import "blocks/modal";
