--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -46,6 +46,7 @@
 @import "blocks/footer";
 @import "blocks/footer-header";
 @import "blocks/social";
+@import "blocks/footer-footer";
 
 
 @import "blocks/modal";
