--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -8,10 +8,12 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  gap: 80px;
   padding: 120px 0;
 
   @include vp-1199 {
     padding: 100px 0;
+    gap: 0;
   }
 
   @include vp-767 {
@@ -49,9 +51,14 @@
   list-style-type: none;
   border-radius: 16px;
 
+  @include vp-1199 {
+    margin: 0 0 80px;
+  }
+
   @include vp-767 {
     flex-direction: column;
     gap: 20px;
+    margin: 0 0 60px;
   }
 }
 
@@ -89,7 +96,6 @@
 
 .contacts__map {
   position: relative;
-  margin: 80px 0 0;
   width: 100%;
   min-height: 500px;
   height: auto;
@@ -101,7 +107,6 @@
   background-image: url("../img/map/map.png");
 
   @include vp-767 {
-    margin: 60px 0 0;
     min-height: 240px;
   }
 
