--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -3,5 +3,11 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-}
+  gap: 25px;
+  padding: 5px 0 50px;
 
+  @include vp-767 {
+    justify-content: center;
+    padding: 5px 0 40px;
+  }
+}
