--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -5,4 +5,21 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
+
+  @include vp-1199 {
+    order: 3;
+  }
+}
+
+.social__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social__link {
+  width: 36px;
+  height: 36px;
+  background-color: $color-default-blue;
+  border-radius: 50%;
 }
