--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -47,6 +47,21 @@
   background-color: $color-default-blue-opacity20;
 }
 
+.hero__swiper-container {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 100px;
+
+  @include vp-1199 {
+    padding: 0 45px;
+  }
+
+  @include vp-767 {
+    padding: 0 15px;
+  }
+}
+
 .hero__list {
   margin: 0;
   padding: 0;
