Добавляет блок Напишите нам

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -43,6 +43,12 @@
 @import "blocks/reviews-card";
 @import "blocks/contacts";
 @import "blocks/map";
+@import "blocks/form";
+@import "blocks/input-text";
+@import "blocks/input-textarea";
+@import "blocks/input-select";
+@import "blocks/input-checkbox";
+
 @import "blocks/footer";
 @import "blocks/footer-header";
 @import "blocks/social";
