--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -14,6 +14,7 @@
   line-height: 14px;
   letter-spacing: 0.28px;
   text-transform: uppercase;
+  cursor: pointer;
 
   @include vp-767 {
     padding: 16px 20px;
@@ -66,5 +67,24 @@
   @include vp-767 {
     top: 16px;
     right: 16px;
+  }
+}
+
+.btn--blue {
+  color: $color-default-white;
+  background-color: $color-default-blue;
+  border: 1px solid $color-default-white;
+  //БЕЛЫЙ КРУГ
+  &::before {
+    background-color: $color-default-white;
+  }
+}
+
+.btn__arrow--blue {
+  border-top: 1px solid $color-default-blue;
+  border-right: 1px solid $color-default-blue;
+
+  &::before {
+    background-color: $color-default-blue;
   }
 }
