--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,22 +4,30 @@
 // Default
 
 $color-default-black:               #000000;
-$color-default-white:               #ffffff;
-$color-default-profect:             #484848;
 $color-transparent:                 rgba(255, 255, 255, 0);
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
-$color-gentian-blue-opacity40:      rgba(13, 29, 51, 0.4);
 $color-default-blue:                #316dc2;
-$color-brown:                       #964b00;
-$color-timber-wolf:                 #f0efe9;
 $color-default-blue-opacity70:      rgb(49, 109, 194, 0.7);
 $color-default-blue-opacity50:      rgb(49, 109, 194, 0.5);
 $color-default-blue-opacity20:      rgba(49, 109, 194, 0.2);
+
+$color-gentian-blue-opacity40:      rgba(13, 29, 51, 0.4);
+
+$color-brown:                       #964b00;
+
+$color-timber-wolf:                 #f0efe9;
+$color-timber-wolf-opacity90:       rgb(240, 239, 233, 0.9);
+$color-timber-wolf-opacity80:       rgb(240, 239, 233, 0.8);
+
+$color-default-white:               #ffffff;
 $color-default-white-opacity70:     rgb(255, 255, 255, 0.7);
+$color-default-white-opacity30:     rgb(255, 255, 255, 0.3);
 $color-default-white-opacity20:     rgb(255, 255, 255, 0.2);
+
+$color-default-profect:             #484848;
 $color-default-profect-opacity60:   rgb(72, 72, 72, 0.6);
 
 
