Добавляет блок Напишите нам

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -3,7 +3,7 @@
 }
 
 .form__image {
-  padding: 0 742px 0 0;
+  border-radius: 16px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -21,8 +21,17 @@
 
 .form__content {
   padding: 89px 74px 51px;
+  width: 498px;
   background-color: $color-default-blue;
   border-radius: 16px;
+
+  @include vp-1199 {
+    width: 442px;
+  }
+
+  @include vp-767 {
+    width: 100%;
+  }
 }
 
 .form__header {
