--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -4,14 +4,17 @@
   justify-content: space-between;
   align-items: center;
   gap: 40px;
-  padding: 120px 0;
+  margin: 0 auto;
+  padding: 120px 100px 120px;
+  width: 100%;
+  max-width: 1440px;
 
   @include vp-1199 {
-    padding: 113px 0 110px;
+    padding: 113px 0 110px 45px;
   }
 
   @include vp-767 {
-    padding: 67px 0;
+    padding: 67px 15px;
   }
 }
 
@@ -58,9 +61,14 @@
   grid-template-columns: 1fr auto;
   gap: 52px;
 
+  @include vp-1199 {
+    padding: 0 45px 0 0;
+  }
+
   @include vp-767 {
     flex-basis: auto;
     gap: 0;
+    padding: 0;
     order: 2;
   }
 }
