Добавляет слайдер блока Новости

--- a/source/sass/blocks/news-card.scss
+++ b/source/sass/blocks/news-card.scss
@@ -39,18 +39,10 @@
 
 .swiper-slide {
   width: calc(25% - 24px);
-
-  @include vp-1199 {
-    width: calc(50% - 60px);
-  }
 }
 
-.swiper-slide-active {
+.swiper-slide:first-child {
   width: calc(50% - 16px);
-
-  @include vp-1199 {
-    width: calc(50% - 60px);
-  }
 }
 
 .swiper-slide .news-card__info {
@@ -61,7 +53,7 @@
   }
 }
 
-.swiper-slide-active .news-card__info {
+.swiper-slide:first-child .news-card__info {
   width: calc(100% - 215px);
 
   @include vp-1199 {
@@ -78,7 +70,7 @@
   }
 }
 
-.swiper-slide-active .news-card__header {
+.swiper-slide:first-child .news-card__header {
   padding: 18px 18px 6px 0;
   width: calc(100% - 313px);
 
