Добавляет уголки блоку Новости

--- a/source/sass/blocks/news-card.scss
+++ b/source/sass/blocks/news-card.scss
@@ -83,7 +83,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  align-self: flex-start;
+  align-items: flex-start;
   min-height: 400px;
 
   @include vp-1199 {
@@ -91,11 +91,29 @@
   }
 }
 
-.news-card__date span {
+.news-card__date {
+  position: relative;
   padding: 12px 12px 6px 0;
   color: $color-default-blue;
-  background-color: $color-default-white;
+  background-color: $color-timber-wolf;
   border-radius: 0 12px 0 0;
+}
+
+.news-card__date .news-card__date-svg-top {
+  position: absolute;
+  top: -16px;
+  left: 0;
+  fill: $color-timber-wolf;
+}
+
+.news-card__date .news-card__date-svg-right {
+  position: absolute;
+  bottom: 0;
+  right: -16px;
+  fill: $color-timber-wolf;
+}
+
+.news-card__date span {
   font-size: 12px;
   font-weight: 400;
   line-height: 12px;
@@ -103,9 +121,17 @@
 }
 
 .news-card__header {
+  position: relative;
   color: $color-default-blue;
-  background-color: $color-default-white;
+  background-color: $color-timber-wolf;
   border-radius: 0 12px 0 0;
+}
+
+.news-card__header svg {
+  position: absolute;
+  bottom: 0;
+  right: -16px;
+  fill: $color-timber-wolf;
 }
 
 .news-card__header h3 {
@@ -121,13 +147,21 @@
 }
 
 .news-card__info {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 46px;
   padding: 12px 18px 15px 0;
-  background-color: $color-default-white;
+  background-color: $color-timber-wolf;
   border-radius: 0 12px 0 0;
+}
+
+.news-card__info svg {
+  position: absolute;
+  bottom: 0;
+  right: -16px;
+  fill: $color-timber-wolf;
 }
 
 .news-card__info p {
