Добавляет фоновый цвет изображениям

--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -6,7 +6,7 @@
   padding: 22px 28px;
   height: 54px;
   color: $color-default-blue;
-  background-color: $color-default-white;
+  background-color: transparent;
   border: 1px solid $color-default-blue;
   border-radius: 30px;
   font-size: 14px;
