--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -7,7 +7,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-color: $color-default-blue;
+  background-color: $color-brown;
   background-image: url("../img/form/wooden-house.jpg");
 
   @include vp-1199 {
