--- a/source/sass/blocks/input-checkbox.scss
+++ b/source/sass/blocks/input-checkbox.scss
@@ -50,7 +50,7 @@
 .input-checkbox__control h3 {
   margin: 0;
   padding: 0 0 0 30px;
-  color: $color-default-white;
+  color: $color-default-white-opacity90;
   font-size: 12px;
   font-weight: 400;
   line-height: 12px;
