--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -17,6 +17,7 @@ $color-default-blue-opacity20:      rgba(49, 109, 194, 0.2);
 $color-gentian-blue-opacity40:      rgba(13, 29, 51, 0.4);
 
 $color-brown:                       #964b00;
+$color-grey:                        #a9afb7;
 
 $color-timber-wolf:                 #f0efe9;
 $color-timber-wolf-opacity90:       rgb(240, 239, 233, 0.9);
