--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -84,6 +84,7 @@
   @include disabled {
     color: $color-grey;
     background-color: transparent;
+    cursor: not-allowed;
 
     &::before {
       background-color: $color-grey;
@@ -93,6 +94,7 @@
       border-top: 1px solid $color-default-white;
       border-right: 1px solid $color-default-white;
       transform: rotate(45deg);
+      cursor: not-allowed;
 
       &::before {
         background-color: $color-default-white;
