--- a/source/sass/blocks/swiper-buttons.scss
+++ b/source/sass/blocks/swiper-buttons.scss
@@ -10,7 +10,7 @@
   width: 22px;
   height: 22px;
   background-color: transparent;
-  border: none;
+  border: 1px solid transparent;
   border-radius: 50%;
   cursor: pointer;
 
@@ -24,11 +24,44 @@
     height: 1px;
     background-color: $color-default-blue;
   }
+
+  @include hover-focus-visible {
+    background-color: $color-default-white;
+  }
+
+  @include focus;
+
+  @include active {
+    background-color: $color-default-white;
+
+    &::before {
+      background-color: $color-default-blue-opacity70;
+    }
+
+    .swiper-buttons__arrow {
+      border-top: 1px solid $color-default-blue-opacity70;
+      border-right: 1px solid $color-default-blue-opacity70;
+    }
+  }
+
+  @include disabled {
+    cursor: not-allowed;
+
+    &::before {
+      background-color: $color-grey;
+    }
+
+    .swiper-buttons__arrow {
+      border-top: 1px solid $color-grey;
+      border-right: 1px solid $color-grey;
+      cursor: not-allowed;
+    }
+  }
 }
 
 .swiper-buttons__arrow {
   position: absolute;
-  top: 7px;
+  top: 6px;
   display: inline-flex;
   width: 8px;
   height: 8px;
