--- a/source/sass/blocks/footer-footer.scss
+++ b/source/sass/blocks/footer-footer.scss
@@ -35,7 +35,9 @@
 }
 
 .footer-footer__copyright {
+  padding: 2px 0;
   color: $color-default-profect;
+  border-bottom: 1px solid $color-default-profect;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
@@ -48,5 +50,17 @@
 
   @include vp-767 {
     line-height: 14px;
+  }
+
+  @include hover-focus-visible {
+    color: $color-default-blue;
+    border-bottom: 1px solid $color-purple-blue;
+  }
+
+  @include focus;
+
+  @include active {
+    color: $color-purple-blue;
+    border-bottom: 1px solid $color-purple-blue;
   }
 }
