--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -26,6 +26,7 @@ $color-timber-wolf-opacity80:       rgb(240, 239, 233, 0.8);
 
 $color-default-white:               #ffffff;
 $color-default-white-opacity90:     rgb(255, 255, 255, 0.9);
+$color-default-white-opacity80:     rgb(255, 255, 255, 0.8);
 $color-default-white-opacity70:     rgb(255, 255, 255, 0.7);
 $color-default-white-opacity30:     rgb(255, 255, 255, 0.3);
 $color-default-white-opacity20:     rgb(255, 255, 255, 0.2);
