--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,6 +11,7 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 
 $color-default-blue:                #316dc2;
 $color-default-blue-opacity70:      rgb(49, 109, 194, 0.7);
+$color-default-blue-opacity60:      rgb(49, 109, 194, 0.6);
 $color-default-blue-opacity50:      rgb(49, 109, 194, 0.5);
 $color-default-blue-opacity20:      rgba(49, 109, 194, 0.2);
 
